# agentic-doc

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-integ.yml  ci-unit.yml  ci_cd.yml  main.yml  release.yml
.specstory/history/: 2025-07-19_11-20Z-generate-a-name-for-the-chat.md
agentic_doc/: __init__.py  common.py  config.py  connectors.py  parse.py  utils.py
app/: app.py
tests/: README.md  conftest.py
tests/integ/: test_parse_integ.py
tests/unit/: test_common.py  test_config.py  test_connectors.py  test_parse.py  test_utils.py
