[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentic-doc"
version = "0.0.16"
description = "A Python library that wraps around VisionAgent document extraction REST API to make documents extraction easy."
authors = ["Landing AI <dev@landing.ai>"]
readme = "README.md"
packages = [{include = "agentic_doc"}]

[tool.poetry.urls]
"Homepage" = "https://va.landing.ai/demo/doc-extraction"
"repository" = "https://github.com/landing-ai/agentic-doc"
"documentation" = "https://github.com/landing-ai/agentic-doc"

[tool.poetry.dependencies]  # main dependency group
python = ">=3.9,<4.0"

tqdm = ">=4.64.0,<5.0.0"
typing_extensions = "4.*"
pydantic = "2.7.4"
pydantic-settings = "^2.2.1"
tenacity = "^8.3.0"
pillow = ">=10.0.0"
pillow-heif = "^0.16.0"
pypdf = "^5.3.1"
structlog = "^25.2.0"
httpx = "^0.28.1"
pymupdf = "^1.25.5"
opencv-python-headless = "^4.11.0.86"


[tool.poetry.group.dev.dependencies]
autoflake = "1.*"
pytest = "^7.0.0"
black = ">=23,<25"
isort = "5.*"
responses = "^0.23.1"
mypy = "<1.8.0"
types-requests = "^2.31.0.0"
types-pillow = "^9.5.0.4"
data-science-types = "^0.2.23"
types-tqdm = "^4.65.0.1"
setuptools = "^70.0.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.2"
pre-commit = "^3.8.0"
flake8 = "^7.1.2"
reportlab = "^4.3.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
exclude = '.vscode|.eggs|venv'
line-length = 88  # suggested by black official site

[tool.isort]
line_length = 88
profile = "black"

[tool.mypy]
plugins = "pydantic.mypy"

exclude = "tests"
show_error_context = true
pretty = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
extra_checks = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "cv2.*",
    "pymupdf.*",
]
